--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script>
         document.getElementById("confirmBtn").addEventListener("click", async () => {
             try {
-                const response = await fetch("https://your-backend-url/api/confirm", {
+                const response = await fetch("https://alive-truckit-cz.vercel.app/api/handler?type=confirm", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ employeeId: 1, timestamp: new Date().toISOString() }),
