--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Potvrzení přítomnosti</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Potvrzuji odjezd na trasu</h1>
+    <h1>Potvrzení odjezdu na trasu</h1>
     <div class="form-group">
-        <input type="text" id="lineId" placeholder="ID trasy">
-        <button id="confirmBtn" disabled>Potvrzuji</button>
+        <input type="password" id="pin" placeholder="PIN" class="pin-input" maxlength="4">
+        <input type="text" id="lineId" placeholder="ID trasy" maxlength="4">
+        <button id="confirmBtn" disabled>ok</button>
     </div>
+
+    <div id="datetime" class="datetime"></div>
+
+    <footer class="footer">
+        <a href="https://truckit.cz" target="_blank">truckit.cz</a>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
