--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>Potvrzení trasy</title>
+    <title>Potvrzení odjezdu na trasu</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
